--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <a href="#contacts">Контакты</a>
         </nav>
         <div>
+            Наш e-mail: <a href="serg.serg.ignatow1998@yandex.ru">serg.serg.ignatow</a>
+        </div>
+        <div>
             <a href="tel:+79039999999">+7 903 999-99-99</a>
             <button>Заказать звонок</button>
         </div>
