--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
             <button>Заказать звонок</button>
         </div>
     </header>
+    <h1>Выберете пункт доставки:</h1>
 </body>
 </html>
